# WDeversion_theory

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml  requirements.txt
Experiments/notebooks/: 2_SpatialCellshape-analysis.ipynb  image_crosssection_fit.ipynb  prop_comparison_analysis-lambda-beta.ipynb  prop_comparison_analysis-lambda.ipynb  prop_comparison_analysis.ipynb  visualize_lambdas.ipynb
Simulations/cluster_scripts/: Averaging_simulated_curves.py  README.md  array_postprocess.sh  array_wd.py  array_wd.sh  combine_def_grad.py  curvature_functions.py  geometry_creation_methods.py  input_lambda_df.csv  input_lambda_df.pkl  main.cpp  map_index_49421574.csv  map_index_wd.py  methods.py  postprocess.py  residual_calculation.py  wd_2D_functions.py
Simulations/data/WT/rearrangement/analysis/: crosssections_interpolated_mean.csv
Simulations/notebooks/: Visualization_simple_examples.ipynb  curvature_difference.ipynb  readModelResults.ipynb  readModelResults_Jana.ipynb
src/WDeversion_theory_methods/: prop_comparison_methods.py  seaborn-custom-whitegrid.mplstyle  wd_2D_functions.py
