[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WDeversion_theory_methods"
version = "0.0.1"
authors = [
  { name="Abhijeet Krishna", email="abhijeet095@gmail.com" },
]
description = "Analysis of wing development in Drosophila"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/WDeversion_theory_methods"
"Bug Tracker" = "https://github.com/pypa/WDeversion_theory_methods/issues"